--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!--Inicio del Header-->
-    <header>
+    <header class="header">
         <!--Inicio del Main, contendra el Logo y la Barra de Navegacion-->
         <main class="main-container">
             <!--div dedicado al logo-->
@@ -36,7 +36,7 @@
     <article class="articulo"></article>
     <!--Fin del Articulo-->
     <!--Inicio del Footer-->
-    <footer></footer>
+    <footer class="footer"></footer>
     <!--Fin del Footer-->
 </body>
 </html>
