Indice de la pagina

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <!--Inicio del Header-->
     <header class="header">
-        <!--Inicio del Main, contendra el Logo y la Barra de Navegacion-->
-        <main class="main-container">
+        <!--Inicio del Div:Nombrado contenedor, contendra el Logo y la Barra de Navegacion-->
+        <div class="contenedor">
             <!--div dedicado al logo-->
             <div class="logo">
                 <img src="img/logo_principal.png" alt="Logo">
             </div>
-            <!--Fuera del Div-->
+            <!--Fuera del Div:nombrado contenedor-->
             <!--Inicio de la Barra de Navegacion-->
             <nav class="barra_nav">
             <!--Creacion del Listado para menu-->
@@ -29,14 +29,20 @@
             <!--Fin del  Listado para Menu-->
             </nav>
             <!--Fuera del Nav-->
-        </main>
-        <!--Fuera del main-->
+        </div>
+        <!--Fuera del Div:Nombrado Main-->
     </header>
     <!--Inicio de la Seccion del Articulo-->
-    <article class="articulo"></article>
+    <main class="articulo"></main>
     <!--Fin del Articulo-->
     <!--Inicio del Footer-->
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <div class="contenedor-logos">
+            <a href="https://github.com/MiguelBelotto00"><img src="img/Github-logo.svg" alt="Github-logo" class="logos-redes"></a>
+            <a href="https://twitter.com/MiguelBelotto00"><img src="img/Twitter-logo.svg" alt="Twitter-logo" class="logos-redes"></a>
+            <a href="https://www.linkedin.com/in/miguel-belotto"><img src="img/linkedin-logo.svg" alt="linkedin-logo" class="logos-redes"></a>
+        </div>
+    </footer>
     <!--Fin del Footer-->
 </body>
 </html>
