indice de la pagina

--- a/index.html
+++ b/index.html
@@ -37,10 +37,25 @@
         <!--Fuera del Div:Nombrado Main-->
     </header>
     <!--Inicio de la Seccion del Articulo-->
-    <main class="articulo"></main>
+    <main class="articulo">
+        <div>
+            <p>Soy un estudiante de la carrera ingenieria en informatica. Tengo 21 años y me considero una persona aficionada y apasionada por lo que es la programacion en general. Aún no defini una tecnologia pero ya lo hare pronto...
+            </p>
+        </div>
+        <!--Inicio del Contenedor de Imagenes y Texto-->
+        <div class="img-container">
+            <div class="img-item">
+            <img src="img/html5.svg" alt="logo-html5"><span>Este sitio esta basado en HTML 5, asi es puras etiquetas...</span>
+            </div>
+            <div class="img-item">
+            <img src="img/css-3.svg" alt="logo-css"> <span>Se utilizo CSS3 para el estilo.</span>
+        </div>
+        <!--Fin del contenedor de imagenes y texto-->
+    </main>
     <!--Fin del Articulo-->
     <!--Inicio del Footer-->
     <footer class="footer">
+        <!--Contenedor de Logos-->
         <div class="contenedor-logos">
             <a href="https://github.com/MiguelBelotto00"><img src="img/Github-logo.svg" alt="Github-logo" class="logos-redes"></a>
             <a href="https://twitter.com/MiguelBelotto00"><img src="img/Twitter-logo.svg" alt="Twitter-logo" class="logos-redes"></a>
