--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Miguel Belotto</title>
 </head>
-<body>
+<body id="inicio">
     <!--Inicio del Header-->
     <header class="header">
         <!--Inicio del Div:Nombrado contenedor, contendra el Logo y la Barra de Navegacion-->
@@ -26,9 +26,9 @@
             <nav class="barra_nav">
             <!--Creacion del Listado para menu-->
                 <ul class="menu">
-                    <li class="menu-item">Inicio</li>
-                    <li class="menu-item">Sobre mi</li>
-                    <li class="menu-item">Otros Intereses</li>
+                    <li class="menu-item"><a href="https://miguelbelotto00.github.io/">Inicio</a></li>
+                    <li class="menu-item"><a href="#sobre_mi">Sobre mi</a></li>
+                    <li class="menu-item"><a href="#">Otros Intereses</a></li>
                 </ul>
             <!--Fin del  Listado para Menu-->
             </nav>
@@ -38,19 +38,22 @@
     </header>
     <!--Inicio de la Seccion del Articulo-->
     <main class="articulo">
-        <div>
-            <p>Soy un estudiante de la carrera ingenieria en informatica. Tengo 21 años y me considero una persona aficionada y apasionada por lo que es la programacion en general. Aún no defini una tecnologia pero ya lo hare pronto...
-            </p>
+       <div class="info_personal">
+            <div class="sobre_mi" id="sobre_mi">
+                Soy un estudiante de la carrera ingenieria en informatica. Tengo 21 años y me considero una persona aficionada y apasionada por lo que es la programacion en general. 
+                 Aún no defini una tecnologia pero ya lo hare pronto...
+            </div>
         </div>
         <!--Inicio del Contenedor de Imagenes y Texto-->
         <div class="img-container">
             <div class="img-item">
-            <img src="img/html5.svg" alt="logo-html5"><span>Este sitio esta basado en HTML 5, asi es puras etiquetas...</span>
+                <img src="img/html5.svg" alt="logo-html5"><span>Este sitio esta basado en HTML 5, asi es puras etiquetas...</span>
             </div>
             <div class="img-item">
-            <img src="img/css-3.svg" alt="logo-css"> <span>Se utilizo CSS3 para el estilo.</span>
+                <img src="img/css-3.svg" alt="logo-css"> <span>Se utilizo CSS3 para el estilo.</span>
+            </div>
         </div>
-        <!--Fin del contenedor de imagenes y texto-->
+            <!--Fin del contenedor de imagenes y texto-->
     </main>
     <!--Fin del Articulo-->
     <!--Inicio del Footer-->
