Indice de la Pagina

--- a/index.html
+++ b/index.html
@@ -38,13 +38,18 @@
     </header>
     <!--Inicio de la Seccion del Articulo-->
     <main class="articulo">
-       <div class="info_personal">
+       <h1 class="title">Sobre mi</h1>
+        <div class="info_personal">
             <div class="sobre_mi" id="sobre_mi">
                 Soy un estudiante de la carrera ingenieria en informatica. Tengo 21 años y me considero una persona aficionada y apasionada por lo que es la programacion en general. 
                  Aún no defini una tecnologia pero ya lo hare pronto...
             </div>
+            <div class="imagen_personal">
+                <img src="img/developer_logo.svg" alt="imagen_personal">
+            </div>
         </div>
         <!--Inicio del Contenedor de Imagenes y Texto-->
+        <h1 class="title">Skills</h1>
         <div class="img-container">
             <div class="img-item">
                 <img src="img/html5.svg" alt="logo-html5"><span>Este sitio esta basado en HTML 5, asi es puras etiquetas...</span>
@@ -59,6 +64,7 @@
     <!--Inicio del Footer-->
     <footer class="footer">
         <!--Contenedor de Logos-->
+       <h1 class="title">Contacto</h1>
         <div class="contenedor-logos">
             <a href="https://github.com/MiguelBelotto00"><img src="img/Github-logo.svg" alt="Github-logo" class="logos-redes"></a>
             <a href="https://twitter.com/MiguelBelotto00"><img src="img/Twitter-logo.svg" alt="Twitter-logo" class="logos-redes"></a>
