--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <img src="img/css-3.svg" alt="logo-css"> <span>Se utilizo CSS3 para el estilo.</span>
             </div>
             <div class="img-item">
-            <img src="img/java.svg" alt="logo-css"> <span>Si nos tomamos un cafe?</span>
+            <img src="img/java.svg" alt="logo-java"> <span>Si nos tomamos un cafe?</span>
             </div>
         </div>
             <!--Fin del contenedor de imagenes y texto-->
