--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
        <h1 class="title">Sobre mi</h1>
         <div class="info_personal">
             <div class="sobre_mi" id="sobre_mi">
-                Soy un estudiante de la carrera ingenieria en informatica. Tengo 21 años y me considero una persona aficionada y apasionada por lo que es la programacion en general. 
-                 Aún no defini una tecnologia pero ya lo hare pronto...
+                Estudiante de la carrera ingenieria en informatica. Apasionado de la programación, actualmente me encuentro aprendiendo nuevos lenguajes.
             </div>
             <div class="imagen_personal">
                 <img src="img/developer_logo.svg" alt="imagen_personal">
@@ -58,7 +57,7 @@
                 <img src="img/css-3.svg" alt="logo-css"> <span>Se utilizo CSS3 para el estilo.</span>
             </div>
             <div class="img-item">
-            <img src="img/java.svg" alt="logo-java"> <span>Si nos tomamos un cafe?</span>
+            <img src="img/piton.svg" alt="logo-python"> <span>Y si programamos algo?</span>
             </div>
         </div>
             <!--Fin del contenedor de imagenes y texto-->
