--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
        <h1 class="title">Sobre mi</h1>
         <div class="info_personal">
             <div class="sobre_mi" id="sobre_mi">
-                Estudiante de la carrera ingenieria en informatica. Apasionado de la programación, actualmente me encuentro aprendiendo nuevos lenguajes.
+                Estudiante de la carrera ingenieria en informatica. Apasionado de la programacón, actualmente me quiero enfocar en el desarrollo web. Pero siempre viendo que nuevas tecnologias aprender
             </div>
             <div class="imagen_personal">
                 <img src="img/developer_logo.svg" alt="imagen_personal">
@@ -57,7 +57,10 @@
                 <img src="img/css-3.svg" alt="logo-css"> <span>Se utilizo CSS3 para el estilo.</span>
             </div>
             <div class="img-item">
-            <img src="img/piton.svg" alt="logo-python"> <span>Y si programamos algo?</span>
+                <img src="img/piton.svg" alt="logo-python"> <span>Y si programamos algo?</span>
+            </div>
+            <div class="img-item">
+                <img src="img/icons8-javascript.svg" alt="logo-javascript"> <span>Y si automatizo esto?</span>
             </div>
         </div>
             <!--Fin del contenedor de imagenes y texto-->
