--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:ital,wght@1,300&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/Icono-Miguel.png">
+    <link rel="stylesheet" href="css/media_animaciones.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Miguel Belotto</title>
@@ -18,39 +19,39 @@
         <!--Inicio del Div:Nombrado contenedor, contendra el Logo y la Barra de Navegacion-->
         <div class="contenedor">
             <!--div dedicado al logo-->
-            <div class="logo">
-                <img src="img/logo_principal.png" alt="Logo">
-            </div>
+                    <div class="logo col-lg-4 col-md-4">
+                        <img src="img/logo_principal.png" alt="Logo">
+                    </div>
             <!--Fuera del Div:nombrado contenedor-->
             <!--Inicio de la Barra de Navegacion-->
-            <nav class="barra_nav">
-            <!--Creacion del Listado para menu-->
-                <ul class="menu">
-                    <li class="menu-item"><a href="https://miguelbelotto00.github.io/">Inicio</a></li>
-                    <li class="menu-item"><a href="#sobre_mi">Sobre mi</a></li>
-                    <li class="menu-item"><a href="#">Otros Intereses</a></li>
-                </ul>
-            <!--Fin del  Listado para Menu-->
-            </nav>
+                    <nav class="barra_nav col-lg-8 col-md-8">
+                    <!--Creacion del Listado para menu-->
+                        <ul class="menu">
+                            <li class="menu-item"><a href="https://miguelbelotto00.github.io/">Inicio</a></li>
+                            <li class="menu-item"><a href="#sobre_mi">Sobre mi</a></li>
+                            <li class="menu-item"><a href="#">Otros Intereses</a></li>
+                        </ul>
+                    <!--Fin del  Listado para Menu-->
+                    </nav>
             <!--Fuera del Nav-->
         </div>
         <!--Fuera del Div:Nombrado Main-->
     </header>
     <!--Inicio de la Seccion del Articulo-->
-    <main class="articulo">
-       <h1 class="title">Sobre mi</h1>
+    <main class="articulo col-lg-12 col-md-12">
+       <h1 class="title col-lg-12 col-md-12 col-sm-12 col-12">Sobre mi</h1>
         <div class="info_personal">
-            <div class="sobre_mi" id="sobre_mi">
+            <div class="sobre_mi col-lg-6 col-md-4" id="sobre_mi">
                 Estudiante de la carrera ingenieria en informatica. Apasionado de la programacón, actualmente me quiero enfocar en el desarrollo web. Pero siempre viendo que nuevas tecnologias aprender
             </div>
-            <div class="imagen_personal">
+            <div class="imagen_personal col-lg-6 col-md-8">
                 <img src="img/developer_logo.svg" alt="imagen_personal">
             </div>
         </div>
         <!--Inicio del Contenedor de Imagenes y Texto-->
-        <h1 class="title">Skills</h1>
-        <div class="img-container">
-            <div class="img-item">
+        <div class="img-container col-lg-12 col-md-12">
+            <h1 class="title">Skills</h1>
+            <div class="img-item ">
                 <img src="img/html5.svg" alt="logo-html5"><span>Este sitio esta basado en HTML 5, asi es puras etiquetas...</span>
             </div>
             <div class="img-item">
@@ -70,7 +71,7 @@
     <footer class="footer">
         <!--Contenedor de Logos-->
        <h1 class="title">Contacto</h1>
-        <div class="contenedor-logos">
+        <div class="contenedor-logos col-lg-12 col-md-12 col-sm-12 col-12">
             <a href="https://github.com/MiguelBelotto00"><img src="img/Github-logo.svg" alt="Github-logo" class="logos-redes"></a>
             <a href="https://twitter.com/MiguelBelotto00"><img src="img/Twitter-logo.svg" alt="Twitter-logo" class="logos-redes"></a>
             <a href="https://www.linkedin.com/in/miguel-belotto"><img src="img/linkedin-logo.svg" alt="linkedin-logo" class="logos-redes"></a>
