--- a/index.html
+++ b/index.html
@@ -1,82 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:ital,wght@1,300&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="img/Icono-Miguel.png">
-    <link rel="stylesheet" href="css/media_animaciones.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media_animaciones.css">
+    <link rel="icon" href="img/Icono-Miguel.png">
     <title>Miguel Belotto</title>
 </head>
-<body id="inicio">
-    <!--Inicio del Header-->
-    <header class="header">
-        <!--Inicio del Div:Nombrado contenedor, contendra el Logo y la Barra de Navegacion-->
-        <div class="contenedor">
-            <!--div dedicado al logo-->
-                    <div class="logo col-lg-4 col-md-4">
-                        <img src="img/logo_principal.png" alt="Logo">
-                    </div>
-            <!--Fuera del Div:nombrado contenedor-->
-            <!--Inicio de la Barra de Navegacion-->
-                    <nav class="barra_nav col-lg-8 col-md-8">
-                    <!--Creacion del Listado para menu-->
-                        <ul class="menu">
-                            <li class="menu-item"><a href="https://miguelbelotto00.github.io/">Inicio</a></li>
-                            <li class="menu-item"><a href="#sobre_mi">Sobre mi</a></li>
-                            <li class="menu-item"><a href="#">Otros Intereses</a></li>
-                        </ul>
-                    <!--Fin del  Listado para Menu-->
-                    </nav>
-            <!--Fuera del Nav-->
-        </div>
-        <!--Fuera del Div:Nombrado Main-->
+<body>
+<!--Inicio del Header-->    
+    <header id="header" class="header">
+            <figure>
+                <img class="icono_principal" src="img/logo_principal.png">
+            </figure>
+            <nav class="barra_navegacion">
+                <ul>
+                <li class="list-item"><a href="https://miguelbelotto00.github.io/">Inicio</a></li>
+                <li class="list-item"><a href="#sobre_mi">Sobre mi</a></li>
+                <li class="list-item"><a href="#contactos">Sobre mi</a></li>
+                </ul>
+            </nav>
     </header>
-    <!--Inicio de la Seccion del Articulo-->
-    <main class="articulo col-lg-12 col-md-12">
-       <h1 class="title col-lg-12 col-md-12 col-sm-12 col-12">Sobre mi</h1>
-        <div class="info_personal">
-            <div class="sobre_mi col-lg-6 col-md-4" id="sobre_mi">
-                Estudiante de la carrera ingenieria en informatica. Apasionado de la programacón, actualmente me quiero enfocar en el desarrollo web. Pero siempre viendo que nuevas tecnologias aprender
-            </div>
-            <div class="imagen_personal col-lg-6 col-md-8">
-                <img src="img/developer_logo.svg" alt="imagen_personal">
-            </div>
-        </div>
-        <!--Inicio del Contenedor de Imagenes y Texto-->
-        <div class="img-container col-lg-12 col-md-12">
-            <h1 class="title">Skills</h1>
-            <div class="img-item ">
-                <img src="img/html5.svg" alt="logo-html5"><span>Este sitio esta basado en HTML 5, asi es puras etiquetas...</span>
-            </div>
-            <div class="img-item">
-                <img src="img/css-3.svg" alt="logo-css"> <span>Se utilizo CSS3 para el estilo.</span>
-            </div>
-            <div class="img-item">
-                <img src="img/piton.svg" alt="logo-python"> <span>Y si programamos algo?</span>
-            </div>
-            <div class="img-item">
-                <img src="img/icons8-javascript.svg" alt="logo-javascript"> <span>Y si automatizo esto?</span>
-            </div>
-        </div>
-            <!--Fin del contenedor de imagenes y texto-->
-    </main>
-    <!--Fin del Articulo-->
-    <!--Inicio del Footer-->
-    <footer class="footer">
-        <!--Contenedor de Logos-->
-       <h1 class="title">Contacto</h1>
-        <div class="contenedor-logos col-lg-12 col-md-12 col-sm-12 col-12">
-            <a href="https://github.com/MiguelBelotto00"><img src="img/Github-logo.svg" alt="Github-logo" class="logos-redes"></a>
-            <a href="https://twitter.com/MiguelBelotto00"><img src="img/Twitter-logo.svg" alt="Twitter-logo" class="logos-redes"></a>
-            <a href="https://www.linkedin.com/in/miguel-belotto"><img src="img/linkedin-logo.svg" alt="linkedin-logo" class="logos-redes"></a>
-        </div>
-    </footer>
-    <!--Fin del Footer-->
+<!--Fin del Header-->    
+<!--Inicio del Main-->
+<main>
+    <article class="sobre_mi" id="#sobre_mi">
+        <p class="texto_sobre_mi">Hola!, soy Miguel Belotto un Apasionado por la programación y sus distintas areas. Actualmente me enfocare en el desarrollo web, pero siempre abierto para hacer otras cosas... </p>
+        <figure>
+            <img class="imagen_programador" src="img/developer_logo.svg">
+        </figure>
+    </article>
+    <h2>Skill</h2>
+    <section class="container-lenguage">
+            <figure>
+                <img class="html-5" src="img/html5.svg">
+                <figcaption>Este sitio fue creado con HTML5</figcaption>
+            </figure>
+            <figure>
+                    <img class="css-3" src="img/css-3.svg">
+                    <figcaption>El estilo fue dado con css</figcaption>
+            </figure>
+            <figure>
+                <img class="javascript" src="img/icons8-javascript.svg">
+                <figcaption>Y si automatizo eso?</figcaption>
+             </figure>
+             <figure>
+                <img class="python" src="img/piton.svg">
+                <figcaption>Django sin cadenas...</figcaption>
+             </figure>
+    </section>
+</main>
+<!--Fin del Main-->
+<footer>
+    <h2>Contacto</h2>
+    <div class="logos-redes" id="contactos">
+        <figure>
+           <a href="https://github.com/MiguelBelotto00"><img src="img/Github-logo.svg"></a>
+        </figure>
+        <figure>
+            <a href="https://twitter.com/MiguelBelotto00"><img src="img/Twitter-logo.svg"></a>
+         </figure>
+         <figure>
+            <a href="https://www.linkedin.com/in/miguel-belotto/"><img src="img/linkedin-logo.svg"></a>
+         </figure>
+    </div>
+</footer>
 </body>
 </html>
