--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul>
                 <li class="list-item"><a href="https://miguelbelotto00.github.io/">Inicio</a></li>
                 <li class="list-item"><a href="#sobre_mi">Sobre mi</a></li>
-                <li class="list-item"><a href="#contactos">Sobre mi</a></li>
+                <li class="list-item"><a href="#contactos">Contacto</a></li>
                 </ul>
             </nav>
     </header>
